@@ -292,7 +292,11 @@
                             <systemPropertyVariables>
                                 <project.version>${project.version}</project.version>
                             </systemPropertyVariables>
-                            <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+                            <argLine>
+                                -Dnet.bytebuddy.experimental=true
+                                --add-opens java.base/java.lang=ALL-UNNAMED
+                                --add-opens java.base/java.util=ALL-UNNAMED
+                            </argLine>
                         </configuration>
                     </plugin>
                 </plugins>
